--- a/src/sass/structure/navigation/_menu.scss
+++ b/src/sass/structure/navigation/_menu.scss
@@ -332,11 +332,10 @@
 			}
 
 			.nav-flyout {
-			    background: url($siegelurl) no-repeat 95% bottom, linear-gradient(to top, $colorPrimaryHeroLight 0%, $colorPrimaryHero 100%);
-			     .fauorg-kooperation & {
-				background: linear-gradient(to top, $colorPrimaryHeroLight 0%, $colorPrimaryHero 100%);
-			     }
-				
+				background: svg-ci-siegel($colorPrimaryHeroLight, 320, 320) no-repeat 95% 10px, linear-gradient(to top, $colorPrimaryHeroLight 0%, $colorPrimaryHero 100%);
+				.fauorg-kooperation & {
+				   background: linear-gradient(to top, $colorPrimaryHeroLight 0%, $colorPrimaryHero 100%);
+				}
 
 				@media (min-width: $screen-sm) {
 					min-height: 199px;
