siegel als img aus error und search entfernt.

--- a/src/sass/svg/_global.scss
+++ b/src/sass/svg/_global.scss
@@ -9,6 +9,9 @@ svg {
     }
 }
 
+
+// In SVG-background definitions we cannot use hex colors; therefor we
+// have to encode them
 @function encodecolor($string) {
   @if type-of($string) == 'color' and str-index(#{$string}, '#') == 1 {
     $hex: str-slice(ie-hex-str($string), 4);
