--- a/src/sass/elements/_links.scss
+++ b/src/sass/elements/_links.scss
@@ -103,17 +103,16 @@ a {
 	position: fixed;
 	bottom: 20px; 
 	right: 20px;
-	
-	@extend .fa;
-	@extend .fa-2x;
-	@extend .fa-chevron-up;
 
 	background: $colorPrimary;
+	
+	
 	color: #fff;
 	padding: 7px;
 	@include border-radius(4px);
 	
-	&:hover, &:focus {
+	&:hover, 
+	    &:focus {
 		color: #fff;
 		background: $colorHover;
 	}
