--- a/src/sass/elements/_paragraphs.scss
+++ b/src/sass/elements/_paragraphs.scss
@@ -66,6 +66,6 @@ address {
 
 p.presentationtitle {
     font-weight: bold;
-    @include px2rem($font-size-h1,  $font-size-base, $font-size-h1 * 1.3);
+    @include px2rem($font-size-h1,  $font-size-base);
     margin: 20px 0 20px 0;
 }
