a11y bei dem svg logo im header verbessert

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -184,6 +184,8 @@ $font-size-header-branding: 19;
 $font-size-hero-slider-title: 25;
 $font-size-hero-slider-text: 18;
 $font-size-hero-slider-copyright: 14;
+$font-size-hero-meta-portal: 40;
+
 $font-size-textbuttons: 14;
 $font-size-linkicon: 13;
 $font-size-hero-links: 13;
