--- a/src/sass/elements/_headlines.scss
+++ b/src/sass/elements/_headlines.scss
@@ -206,6 +206,7 @@ h6 {
     }
 }
 
+/*
 @media (max-width: $breakMD) {
     h1, h2, h3, h4, h5, h6, p {
 		margin-left: 15px;
@@ -221,3 +222,4 @@ h6 {
    }
 
 }
+*/
