--- a/src/sass/structure/footer/_pagefooter.scss
+++ b/src/sass/structure/footer/_pagefooter.scss
@@ -7,18 +7,19 @@
 	color: #fff;
 	padding: 0 0 20px 0;
 	
-
-	a {
-		color: #fff;
-		text-decoration: none;
-	}
 	
 	li {
 		@include px2rem($font-size-footer);
 	}
 	
+	a {
+		color: #fff;
+		text-decoration: none;
+	}
+	
+	
 	a:hover, a:focus {
-		text-decoration: underline;
+	    text-decoration: underline;
 	}
 	@media (min-width: $screen-sm) {
 	    padding: 20px 0;
@@ -64,7 +65,11 @@
 		  color:  #fff;
 	    }
 	}
-
+	.footer-address {
+	    @media (min-width: $screen-xs) {
+		margin-top: inherit;
+	    }
+	}
 
 	.footer-meta {
 	   text-align: left;
@@ -72,86 +77,40 @@
 	       text-align: right;
 	   }
        }
-}
-
-
-
-.footer-logo {
-    @extend .col-xs-6;
-    @extend .col-sm-4;
-    @extend .col-md-3;
-}
-.footer-address {
-    @extend .col-xs-6;
-    @extend .col-sm-4;
-    @extend .col-md-3;
-}
-.footer-meta {
-    @extend .col-xs-10;
-    @extend .col-sm-4;
-    @extend .col-md-6;
-
-}
-
-
-
-
-/* Footer Navigation */
-#footer-nav {
-	@include no-list;
-	text-align: left;
-	
-	@media (min-width: $screen-sm) {
-	    text-align: right;
-	}
-	
-	li {
+       
+       /* Footer Navigation */
+	#footer-nav {
 		@include no-list;
-		display: inline;
-		margin-left: 8px;
-		background: none;
+		text-align: left;
+
+		@media (min-width: $screen-sm) {
+		    text-align: right;
+		}
+
+		li {
+			@include no-list;
+			display: inline;
+			margin-left: 8px;
+			background: none;
+		}
+		li:first-child {
+		    margin-left: 0px;
+		}
 	}
+       
 }
 
-@media (max-width: $screen-xs - 1) {
-    .footer-logo {
-	width: 100%;
-	padding-top: 10px;
-    }
-    .footer-address {
-	width: 100%;
-    }
-    #footer-nav li {
-	margin-left: 0px;
-    }
-}
-
-
-@media (min-width: $screen-xs) {
- #footer {
-	.span4,
-	.span3 {
-	    width: 48%;
-	    width: calc(50% - 10px);
-	    float: left;
-	    margin: 2px;
-
-	}
-	.span5,
-	.span6 {
-	    width: 100%;
-	    margin: 0;
-	    float: none;
-	}
-
-    }
-    .footer-logo {
-	padding-right: 0;
-	min-width: 200px;
-    }
-    .footer-address {
-	max-width: calc(100% - 215px);
-    }
+.footer-row {
+    display: flex;
+    flex-wrap: wrap;
     
-   
+    .footer-logo {
+	flex: 0 0 240px;
+    }
+    .footer-address {
+	flex: 0 1 250px;
+    }
+    .footer-meta {
+	flex: 1 1;
+    }
 }
