feintuning css für sprachschalter neu

--- a/src/sass/structure/footer/_social-media.scss
+++ b/src/sass/structure/footer/_social-media.scss
@@ -3,7 +3,7 @@
 /*-----------------------------------------------------------------------------------*/
 #social {
 	background: $colorSocialBackground;	
-	margin: 0 -15px;
+	margin: 0;
 	padding: 20px 15px;
 	    
 	    
