--- a/src/sass/structure/hero/_herobase.scss
+++ b/src/sass/structure/hero/_herobase.scss
@@ -75,7 +75,7 @@
     }
 
   
-
+/*
     .admin-bar & {
 	top: $wordpress-adminbar-bigheight;
 	
@@ -83,7 +83,7 @@
 	   top: $wordpress-adminbar-smallheight;
 	} 
     }
-  
+  */
    
 }
 
