--- a/src/sass/structure/layout/_flex-boxes.scss
+++ b/src/sass/structure/layout/_flex-boxes.scss
@@ -29,3 +29,22 @@
     
     
 }
+
+.meta-container {
+
+  margin-right: auto;
+  margin-left: auto;
+  width: auto;
+
+  @media (min-width: $screen-sm-min) {
+	width: $container-sm;
+	padding-left:  floor(($grid-gutter-width / 2));
+	padding-right: ceil(($grid-gutter-width / 2));
+     }
+     @media (min-width: $screen-md-min) {
+       width: $container-md;
+     }
+     @media (min-width: $screen-lg-min) {
+       width: $container-lg;
+     }
+}
