optimierung artikel in mobile device optimierung some icons in mobile device

--- a/src/sass/elements/_paragraphs.scss
+++ b/src/sass/elements/_paragraphs.scss
@@ -14,7 +14,12 @@ p, address {
     #footer & {
 	color: #fff;
 	background: $colorPrimaryHero;
-	@include px2rem($font-size-footer);
+	
+
+	@media (min-width: $screen-sm) {
+	    @include px2rem($font-size-footer);
+	}
+
     }
 }
 
