--- a/src/sass/structure/content/_global.scss
+++ b/src/sass/structure/content/_global.scss
@@ -69,3 +69,7 @@
 //  pointer-events: none;
 // Not yet supportet by W3C
 }
+.single-post #droppoint::before {
+    margin-top: inherit; 
+    height: inherit; 
+}
