--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -103,6 +103,8 @@
     }
     h1.mobiletitle {
 	margin-top: 0;
+	padding: 10px 0;
+	hyphens: auto;
 	 @media (min-width: $screen-sm) {
 	      @include sr-only();
 	 }
