--- a/src/sass/structure/content/_global.scss
+++ b/src/sass/structure/content/_global.scss
@@ -8,8 +8,8 @@
     position: relative;
     display: block;
     
-    
-    @media (min-width: $screen-sm) {
+
+    @media (min-width: $screen-md) {
 	padding: 40px 0 30px 0;
     }
     
@@ -26,17 +26,8 @@
 	.sidebar-inline {
 	    @include px2rem($font-size-sidebar);
 	}
-	
-	
     }
-    .page-template-page-start-sub &,
-    .page-template-page-start & {
-	padding-top: 20px;
-	@media (min-width: $screen-sm) and (max-width: $screen-md) {
-	    margin-top: 40px;
-	}
-    }
-    
+   
     
     ul.page-print-actions {
 	display: none;
