--- a/src/sass/structure/footer/_pagefooter.scss
+++ b/src/sass/structure/footer/_pagefooter.scss
@@ -31,6 +31,9 @@
 	.socialmedia {
 	    margin-top: 1rem;
 	    margin-right: 50px;
+	    @media (min-width: $screen-sm) {
+		 margin-right: 0;
+	    }
 	    li {		
 		display: inline;
 		
