updates zu univis integration

--- a/src/sass/plugins/_rrze-univis.scss
+++ b/src/sass/plugins/_rrze-univis.scss
@@ -3,6 +3,9 @@
 /* https://github.com/RRZE-Webteam/rrze-univis
 /*-----------------------------------------------------------------------------------*/
 
+#content.rrze-univis {
+	padding-top: 0;
+    }
 .rrze-univis {
     h1.mobiletitle {
 	margin-top: 0;
