-  Problem Verborgenes Element hat fokussierbaren Inhalt  bei Bildergalerie

--- a/src/sass/structure/content/_global.scss
+++ b/src/sass/structure/content/_global.scss
@@ -60,7 +60,7 @@
 //  pointer-events: none;
 // Not yet supportet by W3C
 }
-.single-post #droppoint::before {
+.single #droppoint::before {
     margin-top: inherit; 
     height: inherit; 
 }
