--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -4498,7 +4498,10 @@ img {
     margin: 0 auto 10px auto; }
 
 main img {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); }
+  box-shadow: none; }
+  @media (min-width: 768px) {
+    main img {
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); } }
   main img.shadow {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5); }
   main img.thickborder {
@@ -4792,63 +4795,73 @@ div.aligncenter {
 /*-----------------------------------------------------------------------------------*/
 /* WordPress required classes
 /*-----------------------------------------------------------------------------------*/
+/*
 .alignnone {
-  margin: 5px 20px 20px 0; }
+    margin: 5px 20px 20px 0;
+}
 
 .aligncenter,
 div.aligncenter {
-  display: block;
-  margin: 5px auto 5px auto; }
+    display: block;
+    margin: 5px auto 5px auto;
+}
 
 .alignright {
-  float: right;
-  margin: 5px 0 20px 20px; }
+    float:right;
+    margin: 5px 0 20px 20px;
+}
 
 .alignleft {
-  float: left;
-  margin: 5px 20px 20px 0; }
+    float: left;
+    margin: 5px 20px 20px 0;
+}
 
 a img.alignright {
-  float: right;
-  margin: 5px 0 20px 20px; }
+    float: right;
+    margin: 5px 0 20px 20px;
+}
 
 a img.alignnone {
-  margin: 5px 20px 20px 0; }
+    margin: 5px 20px 20px 0;
+}
 
 a img.alignleft {
-  float: left;
-  margin: 5px 20px 20px 0; }
+    float: left;
+    margin: 5px 20px 20px 0;
+}
 
 a img.aligncenter {
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .wp-caption {
-  background: #fff;
-  border: 1px solid #f0f0f0;
-  max-width: 96%;
-  /* Image does not overflow the content area */
-  padding: 5px 3px 10px;
-  text-align: center; }
+    padding: 5px 3px 10px;
+    text-align: center;
+}
 
 .wp-caption.alignnone {
-  margin: 5px 20px 20px 0; }
+    margin: 5px 20px 20px 0;
+}
 
 .wp-caption.alignleft {
-  margin: 5px 20px 20px 0; }
+    margin: 5px 20px 20px 0;
+}
 
 .wp-caption.alignright {
-  margin: 5px 0 20px 20px; }
+    margin: 5px 0 20px 20px;
+}
 
 .wp-caption img {
-  border: 0 none;
-  height: auto;
-  margin: 0;
-  max-width: 98.5%;
-  padding: 0;
-  width: auto; }
+    border: 0 none;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    width: auto;
+}
 
+*/
 .sticky,
 .gallery-caption,
 .bypostauthor {
