--- a/src/sass/elements/_images.scss
+++ b/src/sass/elements/_images.scss
@@ -53,8 +53,10 @@ img {
 
 main {	
 	img {
-		@include box-shadow(0 1px 2px rgba(0,0,0,0.3));
-				
+		@include box-shadow(none);
+		@media (min-width: $screen-sm) {
+		    @include box-shadow(0 1px 2px rgba(0,0,0,0.3));
+		}
 		&.shadow {
 		    @include box-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
 		}
