--- a/src/sass/elements/_wordpress.scss
+++ b/src/sass/elements/_wordpress.scss
@@ -2,6 +2,7 @@
 /* WordPress required classes
 /*-----------------------------------------------------------------------------------*/
 
+/*
 .alignnone {
     margin: 5px 20px 20px 0;
 }
@@ -43,9 +44,6 @@ a img.aligncenter {
 }
 
 .wp-caption {
-    background: #fff;
-    border: 1px solid #f0f0f0;
-    max-width: 96%; /* Image does not overflow the content area */
     padding: 5px 3px 10px;
     text-align: center;
 }
@@ -66,11 +64,11 @@ a img.aligncenter {
     border: 0 none;
     height: auto;
     margin: 0;
-    max-width: 98.5%;
     padding: 0;
     width: auto;
 }
 
+*/
 .sticky, 
 .gallery-caption, 
 .bypostauthor {
