--- a/src/sass/structure/layout/_posts.scss
+++ b/src/sass/structure/layout/_posts.scss
@@ -5,38 +5,28 @@
 #content {
     .post-row {
 	display: flex;
-	flex-wrap: nowrap;
-	justify-content: space-between; 
+	flex-wrap: wrap;
+	justify-content: flex-start;
 
 	
 	margin-left: -15px;
 	margin-right: -15px;
 	
-	@media (min-width: $screen-sm) {
-	     margin-left: 0;
-	    margin-right: 0;
-	}
+	
 
 	.entry-content,
 	.post {
-	    flex: 1 0 480px;
-
-	    .wp-caption {
-		max-width: 100%;
-		@media (min-width: $screen-sm) {
-		    max-width: calc(710px - 330px);
-
-		}
-		 @media (min-width: $screen-md) {
-		     max-width: calc(940px - 330px);
-		 }
-		 @media (min-width: $screen-lg) {
-		     max-width: calc(940px - 330px);
-		 }
+	    @media (min-width: $screen-sm) {
+		flex-basis: 66%;
 	    }
+	    
 	}
 	.sidebar-single {
-	    flex: 0 0 320px;
+	    @media (min-width: $screen-sm) {
+		flex-basis: 33%;
+		max-width: 320px;
+	    }
 	}
+	
     }
 }
