--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 1.12.50-11
+Version: 1.12.50-23
 Requires at least: 5.0
 Tested up to: 5.7
 Requires PHP: 7.3
@@ -4359,34 +4359,18 @@ body.embedded {
 /*-----------------------------------------------------------------------------------*/
 #content .post-row {
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   margin-left: -15px;
   margin-right: -15px; }
   @media (min-width: 768px) {
-    #content .post-row {
-      margin-left: 0;
-      margin-right: 0; } }
-  #content .post-row .entry-content,
-  #content .post-row .post {
-    flex: 1 0 480px; }
-    #content .post-row .entry-content .wp-caption,
-    #content .post-row .post .wp-caption {
-      max-width: 100%; }
-      @media (min-width: 768px) {
-        #content .post-row .entry-content .wp-caption,
-        #content .post-row .post .wp-caption {
-          max-width: calc(710px - 330px); } }
-      @media (min-width: 992px) {
-        #content .post-row .entry-content .wp-caption,
-        #content .post-row .post .wp-caption {
-          max-width: calc(940px - 330px); } }
-      @media (min-width: 1200px) {
-        #content .post-row .entry-content .wp-caption,
-        #content .post-row .post .wp-caption {
-          max-width: calc(940px - 330px); } }
-  #content .post-row .sidebar-single {
-    flex: 0 0 320px; }
+    #content .post-row .entry-content,
+    #content .post-row .post {
+      flex-basis: 66%; } }
+  @media (min-width: 768px) {
+    #content .post-row .sidebar-single {
+      flex-basis: 33%;
+      max-width: 320px; } }
 
 /*-----------------------------------------------------------------------------------*/
 /* Header
@@ -9332,7 +9316,10 @@ img {
     margin: 0 auto 10px auto; }
 
 main img {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); }
+  box-shadow: none; }
+  @media (min-width: 768px) {
+    main img {
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); } }
   main img.shadow {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5); }
   main img.thickborder {
@@ -9633,63 +9620,73 @@ div.aligncenter {
 /*-----------------------------------------------------------------------------------*/
 /* WordPress required classes
 /*-----------------------------------------------------------------------------------*/
+/*
 .alignnone {
-  margin: 5px 20px 20px 0; }
+    margin: 5px 20px 20px 0;
+}
 
 .aligncenter,
 div.aligncenter {
-  display: block;
-  margin: 5px auto 5px auto; }
+    display: block;
+    margin: 5px auto 5px auto;
+}
 
 .alignright {
-  float: right;
-  margin: 5px 0 20px 20px; }
+    float:right;
+    margin: 5px 0 20px 20px;
+}
 
 .alignleft {
-  float: left;
-  margin: 5px 20px 20px 0; }
+    float: left;
+    margin: 5px 20px 20px 0;
+}
 
 a img.alignright {
-  float: right;
-  margin: 5px 0 20px 20px; }
+    float: right;
+    margin: 5px 0 20px 20px;
+}
 
 a img.alignnone {
-  margin: 5px 20px 20px 0; }
+    margin: 5px 20px 20px 0;
+}
 
 a img.alignleft {
-  float: left;
-  margin: 5px 20px 20px 0; }
+    float: left;
+    margin: 5px 20px 20px 0;
+}
 
 a img.aligncenter {
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .wp-caption {
-  background: #fff;
-  border: 1px solid #f0f0f0;
-  max-width: 96%;
-  /* Image does not overflow the content area */
-  padding: 5px 3px 10px;
-  text-align: center; }
+    padding: 5px 3px 10px;
+    text-align: center;
+}
 
 .wp-caption.alignnone {
-  margin: 5px 20px 20px 0; }
+    margin: 5px 20px 20px 0;
+}
 
 .wp-caption.alignleft {
-  margin: 5px 20px 20px 0; }
+    margin: 5px 20px 20px 0;
+}
 
 .wp-caption.alignright {
-  margin: 5px 0 20px 20px; }
+    margin: 5px 0 20px 20px;
+}
 
 .wp-caption img {
-  border: 0 none;
-  height: auto;
-  margin: 0;
-  max-width: 98.5%;
-  padding: 0;
-  width: auto; }
+    border: 0 none;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    width: auto;
+}
 
+*/
 .sticky,
 .gallery-caption,
 .bypostauthor {
