arrow up / search icon top durch svg ersetzt neue svg icon behandlung

--- a/src/sass/fau-theme-style.scss
+++ b/src/sass/fau-theme-style.scss
@@ -9,7 +9,8 @@
 @import "frameworks/frameworks";
 
 // SVG Icons and CI elements
-@import "svg/svg";
+@import "icons/icons";
+
 
 // Mixins
 @import "mixins/mixins";
